--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,10 @@
         },
         {
             "type": "java",
-            "name": "App",
+            "name": "CodeBreaker",
             "request": "launch",
-            "mainClass": "App",
-            "projectName": "Code Breaker_a8b69d6f",
+            "mainClass": "CodeBreaker",
+            "projectName": "Final Project - Code Breaker_83c7cf75",
             "vmArgs": "--module-path \"C:/Java/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
         }
     ]
