--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,9 +15,8 @@
             "name": "CodeBreaker",
             "request": "launch",
             "mainClass": "codebreaker.CodeBreaker",
-            "projectName": "Final Project - Code Breaker_83c7cf75",
+            "projectName": "Mastermind_2bf296c",
             "vmArgs": "--module-path \"C:/Java/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
-
         }
     ]
 }
