--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
         },
         {
             "type": "java",
-            "name": "CodeBreaker",
+            "name": "Mastermind",
             "request": "launch",
-            "mainClass": "codebreaker.CodeBreaker",
+            "mainClass": "mastermind.Mastermind",
             "projectName": "Mastermind_2bf296c",
             "vmArgs": "--module-path \"C:/Java/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
         }
